[tool.poetry]
name = "elt-dw"
version = "0.1.0"
description = "Data Warehouse Project - ELT"
authors = ["Erick Bernardo <contato.bernardo25@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
